<resources>
    <string name="app_name">UFit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkbox_text">Para continuar aceite nossas políticas e <u>\ntermos de uso</u></string>
    <string name="welcome">Olá,\nSeja Bem Vindo(a)</string>
    <string name="forgot_password"><u>Esqueceu sua senha?</u></string>
    <string name="register">Não tem uma conta ainda?<b><font color="#5d99c6"> Registre-se</font></b></string>
    <string name="login">Já possui uma conta?<b><font color="#3F51B5"> Login</font></b></string>
    <string name="register_info_title">Vamos completar o seu perfil</string>
    <string name="register_info_subtitle">Isso vai nos ajudar a saber mais sobre você!</string>
    <string name="choose_your_goal_title">Qual a sua meta ?</string>
    <string name="choose_your_goal_subtitle">Vai nos ajudar a escolher a melhor\nprogramação para você</string>
    <string name="confirm_button">Confirmar</string>
    <string name="abdominals">Abdominals</string>
    <string name="abductors">Abductors</string>
    <string name="adductors">Adductors</string>
    <string name="biceps">Biceps</string>
    <string name="calves">Calves</string>
    <string name="chest">Chest</string>
    <string name="forearms">Forearms</string>
    <string name="glutes">Glutes</string>
    <string name="hamstrings">Hamstrings</string>
    <string name="lats">Lats</string>
    <string name="lower_back">Lower back</string>
    <string name="middle_back">Middle back</string>
    <string name="neck">Neck</string>
    <string name="quadriceps">Quadriceps</string>
    <string name="traps">Traps</string>
    <string name="triceps">Triceps</string>
    <string name="obrigatory_field">Campo obrigatório!</string>
    <string name="password_dont_match">As senhas não conferem!</string>
    <string name="muscular_group_image">Imagem do grupamento muscular</string>
    <string name="date_hint">Ex: 00/00/0000</string>
    <string name="dialogMessage">Você irá sair do aplicativo. Deseja proseguir?</string>
    <string name="dialogTitle">Acesso ao mapa</string>
    <string name="heart_icon_description">Heart icon</string>
    <string name="delete_favorite_dialog_title">Quer excluir este exercício?</string>
    <string name="delete_favorite_dialog_description">O exercício será removido dos favoritos!</string>
    <string name="delete_account_dialog_title">Excluir conta?</string>
    <string name="delete_account_dialog_description">Sua conta será excluida. Deseja continuar?</string>
    <string name="confirm_txt">Confirmar</string>
    <string name="cancel_txt">Cancelar</string>
    <string name="exit_dialog_title">Deseja sair do aplicativo?</string>
    <string name="exit_maps_dialog_description">Você será direcionado ao google maps...</string>
    <string name="exit_dialog_description">Você irá se desconectar do aplicativo!</string>
    <string name="arrow_icon">Arrow Image</string>
    <string name="personal_data_text">Dados Pessoais</string>
    <string name="achievements_text">Conquistas</string>
    <string name="activities_resume_text">Histórico de atividade</string>
    <string name="training_progress_text">Progresso de treino</string>
    <string name="delete_account_text">Excluir conta</string>
    <string name="account_title_text">Conta</string>
    <string name="notification_title_text">Notificação</string>
    <string name="notification_text">Notificações Pop-Up</string>
    <string name="exit_text">Sair</string>
    <string name="password_hint_txt">Senha</string>
    <string name="email_hint_txt">Email</string>
    <string name="splash_title_txt">Treine do seu jeito</string>
    <string name="splash_desc_txt">Encontre os exercícios que combinam com você!</string>
    <string name="height_hint_txt">Sua altura</string>
    <string name="weight_hint_txt">Seu peso</string>
    <string name="gender_hint_txt">Escolha o seu gênero</string>
    <string name="name_hint_txt">Nome</string>
    <string name="surname_hint_txt">Sobrenome</string>

    <string-array name="gender">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outro</item>
    </string-array>


</resources>