<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/SCREEN"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.register.RegisterInfoFragment">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="6dp"
        android:src="@drawable/woman_gym"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_info_title"
        style="@style/TEXT"
        android:textSize="26sp"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_medium"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivImage" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/register_info_subtitle"
        style="@style/TEXT"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlGender"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="320dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/gray_100"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:endIconTint="@color/blue_700"
        app:startIconTint="@color/blue_700"
        android:textColorHint="@color/blue_700"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:startIconDrawable="@drawable/peope_outlined">

        <AutoCompleteTextView
            android:id="@+id/acGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_700"
            android:hint="@string/gender_hint_txt"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlBirth"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="320dp"
        android:layout_height="80dp"
        app:boxBackgroundColor="@color/gray_100"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="0dp"
        android:textColorHint="@color/blue_700"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlGender">

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/etBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTint="@color/blue_700"
            android:drawableStart="@drawable/calendar"
            android:drawablePadding="12dp"
            android:hint="@string/date_hint"
            android:textColor="@color/blue_700"
            app:mask="##/##/####" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_height="80dp"
        app:boxBackgroundColor="@color/gray_100"
        android:textColorHint="@color/blue_700"
        app:boxStrokeWidth="0dp"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintStart_toStartOf="@id/tlBirth"
        app:layout_constraintTop_toBottomOf="@id/tlBirth">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/weight_scale"
            android:drawablePadding="10dp"
            android:drawableTint="@color/blue_700"
            android:hint="@string/weight_hint_txt"
            android:textColor="@color/blue_700"
            android:paddingStart="10dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle"
        android:backgroundTint="@color/blue_500"
        android:padding="14dp"
        android:text="KG"
        android:layout_marginTop="4dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tlBirth"
        app:layout_constraintTop_toTopOf="@id/tlWeight" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_height="80dp"
        app:boxBackgroundColor="@color/gray_100"
        app:boxStrokeColor="@color/white"
        android:textColorHint="@color/blue_700"
        app:boxStrokeWidth="0dp"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintStart_toStartOf="@id/tlWeight"
        app:layout_constraintTop_toBottomOf="@id/tlWeight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/compare_arrows"
            android:drawablePadding="10dp"
            android:drawableTint="@color/blue_700"
            android:hint="@string/height_hint_txt"
            android:textColor="@color/blue_700"
            android:paddingStart="10dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle"
        android:backgroundTint="@color/blue_500"
        android:padding="14dp"
        android:layout_marginTop="4dp"
        android:text="CM"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tlBirth"
        app:layout_constraintTop_toTopOf="@id/tlHeight" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button"
        android:text="Registrar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progress_bar"
        style="@style/SpinKitView.ThreeBounce"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="400dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/blue_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>