<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.app.ufit.ui.login.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/white"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:boxStrokeWidth="0dp"
        app:helperTextTextColor="@color/orange"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor_edittext_login"
            android:drawableStart="@drawable/ic_email2"
            android:hint="Email"
            android:drawablePadding="8dp"
            android:background="@drawable/round_edit_text_background"
            app:endIconMode="clear_text"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:padding="25dp"
            android:backgroundTint="@color/gray_100"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/black"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/orange"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:background=""
        android:layout_marginStart="25dp"
        app:endIconMode="password_toggle"
        android:layout_marginEnd="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:textColorHint="@color/white"
            android:drawableStart="@drawable/ic_locker"
            android:drawablePadding="8dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/cursor_edittext_login"
            android:background="@drawable/round_edit_text_background"
            android:hint="Senha"
            android:padding="25dp"
            android:backgroundTint="@color/gray_100"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:layout_gravity="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:drawablePadding="12dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="200dp"
        android:drawableStart="@drawable/login_outlined"
        android:paddingStart="150dp"
        android:padding="22dp"
        android:textAlignment="textStart"
        android:background="@drawable/button"

        />

    <TextView
        android:id="@+id/tvTelaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>

</ScrollView>