<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/SCREEN"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.editprofile.EditProfileFragment">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Editar Perfil"
        android:textStyle="bold"
        android:textColor="@color/blue_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProfileImage"
        android:layout_width="72dp"
        android:layout_height="72dp"

        android:layout_marginTop="24dp"
        android:backgroundTint="@color/gray_100"
        app:cardCornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Informações"
        android:textStyle="bold"
        android:textColor="@color/blue_700"
        app:layout_constraintEnd_toStartOf="@+id/cvProfileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvProfileImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="320dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/white"
        android:textColorHint="@color/blue_700"
        app:boxStrokeWidth="0dp"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_edit_text_background"
            android:drawableStart="@drawable/ic_person_transparent"
            android:drawablePadding="10dp"
            android:hint="@string/name_hint_txt"
            android:textColor="@color/blue_700"
            android:padding="20dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlLastname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="320dp"
        android:layout_height="90dp"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:boxStrokeColor="@color/white"
        android:textColorHint="@color/blue_700"
        app:boxStrokeWidth="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tlName"
        app:layout_constraintStart_toStartOf="@+id/tlName"
        app:layout_constraintTop_toBottomOf="@+id/tlName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_transparent"
            android:drawablePadding="10dp"
            android:background="@drawable/round_edit_text_background"
            android:padding="20dp"
            android:hint="@string/surname_hint_txt"
            android:textColor="@color/blue_700"
            android:paddingStart="10dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlGender"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="320dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/tlLastname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundColor="@color/gray_100"
        android:textColorHint="@color/blue_700"
        app:boxStrokeWidth="0dp"
        app:startIconDrawable="@drawable/peope_outlined"
        app:endIconTint="@color/black"
        android:layout_marginTop="24dp"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:boxStrokeColor="@color/white">

        <AutoCompleteTextView
            android:id="@+id/acGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender_hint_txt"
            android:textColor="@color/blue_700"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>